# oldap-api

./: .bumpversion.cfg  .dockerignore  .gitignore  CODEX_LOG.md  Dockerfile  Makefile  README.md  admin.py  apierror.py  app.py  codex.md  factory.py  main.py  oladp-api-app.py  oldap-api-app.py  oldap-config.ttl  permset_views.py  pyproject.toml
API-def/: oldap-api.yaml  oldap-api.yaml.client.ts
doc/: search_instance.md
docker-stuff/: docker-compose.yml
helpers/: process_langstring.py
oldap_api/: __init__.py  config.py  factory.py  version.py  wsgi.py
oldap_api/helpers/: process_langstring.py  process_set.py
oldap_api/test/: conftest.py  test_create_datamodel.py  test_create_hierarchical_list.py  test_create_instance.py  test_create_project.py  test_create_resource.py  test_create_role.py  test_create_user.py  test_delete_datamodel.py  test_delete_hlist.py  test_delete_instance.py  test_delete_node.py  test_delete_permissionset.py  test_delete_project.py  test_delete_role.py  test_delete_user.py  test_get_projectid.py  test_instance_create.py  test_instance_fulltext_filter.py  test_instance_read.py  test_login.py  test_modify_datamodel.py  test_modify_hierarchical_list.py  test_modify_instance.py  test_modify_node.py  test_modify_project.py  test_modify_role.py  test_modify_user.py  test_move_node.py  test_password_reset.py  test_read_datamodel.py  test_read_hierarchical_list.py  test_read_instance.py  test_read_project.py  test_read_role.py  test_read_user.py  test_search_instance.py  (+4 more)
restful/: admin.py
test/: conftest.py  test_create_datamodel.py  test_create_hierarchical_list.py  test_create_permissionset.py  test_create_project.py  test_create_user.py  test_delete_datamodel.py  test_delete_hierarchical_list.py  test_delete_hlist.py  test_delete_permissionset.py  test_delete_project.py  test_delete_user.py  test_get_projectid.py  test_login.py  test_modify_datamodel.py  test_modify_hierarchical_list.py  test_modify_node.py  test_modify_permissionset.py  test_modify_project.py  test_modify_user.py  test_move_node.py  test_read_datamodel.py  test_read_hierarchical_list.py  test_read_permissionset.py  test_read_project.py  test_read_user.py  test_search_permissionset.py  test_search_project.py  test_search_user.py  test_upload_hlist.py  test_user.py  text_create_project.py
tmp/: OLDAP_9augh6e9  OLDAP_e8o9kho0
views/: auth_views.py  datamodelling_views.py  hierarchical_list_views.py  permset_views.py  project_views.py  user_views.py
(+10 files in other folders)
