[tool.poetry]
name = "oldap-api"
packages = [{ include = "oldap_api" }]
version = "0.1.4"
description = "Flask API for OLDAP"
authors = ["ManuelRosenthaler <rosenthalermanuel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.1"
flask-cors = "^6.0.1"
requests = "^2.32.3"
gunicorn = "^23.0"
poetry-core = "^2.2.1"
bump2version = "^1.0.1"
coverage = "==7.13.0"
black = "==25.12.0"
pytest = "==9.0.2"
oldaplib = {path = "../oldaplib", develop = true}
#oldaplib = "^0.4.4"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
coverage = "^7.4.3"
openapi-spec-validator = "^0.7"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
