[tool.poetry]
name = "oldap-api"
packages = [{ include = "oldap_api" }]
version = "0.2.0"
description = "Flask API for OLDAP"
authors = ["ManuelRosenthaler <rosenthalermanuel@gmail.com>", "Lukas Rosenthaler <lukas.rosenthaler@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.1.1"
flask-cors = "^6.0.1"
requests = "^2.32.3"
gunicorn = "==25.3.0"
poetry-core = "^2.2.1"
coverage = "==7.13.5"
black = "==26.3.1"
pytest = "^9.0.2"
#oldaplib = {path = "../oldaplib", develop = true}
oldaplib = "^0.6.0"
bump-my-version = "^1.2.7"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
coverage = "^7.4.3"
openapi-spec-validator = "^0.7"
black = "^26.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bumpversion]
current_version = "0.2.0"
commit = true
tag = true
tag_name = "v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'